Working API docs for user endpoints
Got them to work, just needs a bit of refining for a finished product.
