# backend/handler/user.go
@@ -39,7 +39,7 @@ type Params struct {
 // @Success 200 {object} map[string]interface{} "user_id: ID of the created user"
 // @Failure 400 {object} map[string]string "Invalid input"
 // @Failure 500 {string} map[string]string "Internal server error"
-// @Router /users [post]
+// @Router /user [post]
 func (h *Handler) CreateUser(c echo.Context) error {
 	// Parse request
 	user := new(db.CreateUserParams)
@@ -69,6 +69,17 @@ func (h *Handler) CreateUser(c echo.Context) error {
 	return c.JSON(http.StatusOK, map[string]interface{}{"user_id": id})
 }
 
+// LoginUser handles user login
+// @Summary User login
+// @Description Authenticates a user by comparing the submitted password to the hashed password stored in the database
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param user body db.CreateUserParams true "Login Credentials"
+// @Success 200 {object} db.CreateUserParams "Logged in user information"
+// @Failure 400 {string} response "Invalid login credentials"
+// @Failure 500 {string} response "Internal server error"
+// @Router /user/login [post]
 func (h *Handler) LoginUser(c echo.Context) error {
 	user := new(db.CreateUserParams)
 	if err := c.Bind(user); err != nil {
@@ -93,6 +104,17 @@ func (h *Handler) LoginUser(c echo.Context) error {
 	return c.JSON(http.StatusOK, user)
 }
 
+// ChangePassword updates the password for a user
+// @Summary Update password
+// @Description Hashes and updates the password for an existing user
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param req body db.ChangePasswordParams true "Password Update Request"
+// @Success 200 "Password updated successfully"
+// @Failure 400 {object} map[string]string "Invalid input or password criteria not met"
+// @Failure 500 {object} map[string]string "Internal server error during password update"
+// @Router /users/password [post]
 func (h *Handler) ChangePassword(c echo.Context) error {
 	var req db.ChangePasswordParams
 	if err := c.Bind(&req); err != nil {
@@ -100,6 +122,8 @@ func (h *Handler) ChangePassword(c echo.Context) error {
 	}
 
 	log.Printf("ChangePassword request: %+v", req)
+
+	//TODO: Implement authentication and authorization checks here
 
 	// Hash the new password before updating it in the database
 	hash, err := argon2id.CreateHash(req.PasswordHash, argon2id.DefaultParams)
@@ -117,6 +141,17 @@ func (h *Handler) ChangePassword(c echo.Context) error {
 	return c.NoContent(http.StatusOK)
 }
 
+// DeleteUser removes a user from the database
+// @Summary Delete user
+// @Description Deletes a user by ID from the database, requires admin privileges
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param id path int true "User ID"
+// @Success 200 "User successfully deleted"
+// @Failure 400 {object} map[string]string "Invalid user ID"
+// @Failure 500 {string} map[string]string "Internal server error"
+// @Router /users/{id} [delete]
 func (h *Handler) DeleteUser(c echo.Context) error {
 	userID, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
